--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "3rd-exe",
+  "name": "next-amazona",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fontsource/roboto": "^4.5.0",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "js-cookie": "^3.0.1",
-    "next": "11.1.2",
+    "@material-ui/core": "^4.11.4",
+    "js-cookie": "^2.2.1",
+    "mongoose": "^5.13.2",
+    "next": "11.0.1",
+    "next-connect": "^0.10.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint": "7.29.0",
+    "eslint-config-next": "11.0.1"
   }
 }
