--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "mongoose": "^5.13.2",
     "next": "11.0.1",
     "next-connect": "^0.10.2",
+    "notistack": "^1.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.15.4"
   },
   "devDependencies": {
     "eslint": "7.29.0",
