--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.5.1",
+    "cloudinary": "^1.27.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
+    "multer": "^1.4.3",
     "next": "11.0.1",
     "next-connect": "^0.10.2",
     "notistack": "^1.0.10",
     "react": "17.0.2",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.15.4"
+    "react-hook-form": "^7.15.4",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "7.29.0",
