--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@paypal/react-paypal-js": "^7.3.3",
+    "@types/paypal-rest-sdk": "^1.7.6",
     "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.5.1",
@@ -26,10 +27,19 @@
     "react-chartjs-2": "^3.0.5",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.15.4",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/js-cookie": "^2.2.7",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^16.10.1",
+    "@types/react": "^17.0.24",
+    "@types/streamifier": "^0.1.0",
     "eslint": "7.29.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "typescript": "^4.4.3"
   }
 }
